Changes from rel-30 to rel-32-r7-opensource
Change-Id: Id407020de1947a0bce0d29ecbdc6ecb41eea29ef

--- a/kernel-dts/ers-platforms/tegra210b01-ers-common.dtsi
+++ b/kernel-dts/ers-platforms/tegra210b01-ers-common.dtsi
@@ -239,7 +239,7 @@
 		status = "disabled";
 	};
 
-	pcie-controller@1003000 {
+	pcie@1003000 {
 		compatible = "nvidia,tegra210b01-pcie";
 		nvidia,wake-gpio = <&gpio TEGRA_GPIO(A, 2) 0>;
 		status = "okay";
