--- a/kernel-dts/ers-platforms/tegra210b01-ers-e3350-1099-a00-00-common.dtsi
+++ b/kernel-dts/ers-platforms/tegra210b01-ers-e3350-1099-a00-00-common.dtsi
@@ -30,7 +30,7 @@
                 status = "okay";
         };
 
-	pcie-controller@1003000 {
+	pcie@1003000 {
 		/delete-property/ nvidia,wake-gpio;
 	};
 
