--- a/kernel-dts/ers-platforms/tegra210b01-camera-e3326-a00.dtsi
+++ b/kernel-dts/ers-platforms/tegra210b01-camera-e3326-a00.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015-2017, NVIDIA CORPORATION.  All rights reserved.
+ * Copyright (c) 2015-2019, NVIDIA CORPORATION.  All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -78,6 +78,9 @@
 				/* Physical dimensions of sensor */
 				physical_w = "3.674";
 				physical_h = "2.738";
+
+				/* Sensor output flip settings */
+				vertical-flip = "true";
 
 				/* Define any required hw resources needed by driver */
 				/* ie. clocks, io pins, power sources */
@@ -162,81 +165,120 @@
 					mclk_khz = "24000";
 					num_lanes = "2";
 					tegra_sinterface = "serial_c";
-					discontinuous_clk = "no";
+					phy_mode = "DPHY";
+					discontinuous_clk = "yes";
 					dpcm_enable = "false";
 					cil_settletime = "0";
 
 					active_w = "2592";
 					active_h = "1944";
-					pixel_t = "bayer_bggr";
+					mode_type = "bayer";
+					pixel_phase = "bggr";
+					csi_pixel_bit_depth = "10";
 					readout_orientation = "90";
 					line_length = "2688";
 					inherent_gain = "1";
 					mclk_multiplier = "6.67";
 					pix_clk_hz = "160000000";
 
-					min_gain_val = "1.0";
-					max_gain_val = "16";
+					gain_factor = "10";
+					min_gain_val = "10";/* 1DB*/
+					max_gain_val = "160";/* 16DB*/
+					step_gain_val = "1";
+					default_gain = "10";
 					min_hdr_ratio = "1";
-					max_hdr_ratio = "64";
-					min_framerate = "1.816577";
-					max_framerate = "30";
-					min_exp_time = "34";
-					max_exp_time = "550385";
+					max_hdr_ratio = "1";
+					framerate_factor = "1000000";
+					min_framerate = "1816577";/*1.816577 */
+					max_framerate = "30000000";/*30*/
+					step_framerate = "1";
+					default_framerate = "30000000";
+					exposure_factor = "1000000";
+					min_exp_time = "34";/* us */
+					max_exp_time = "550385";/* us */
+					step_exp_time = "1";
+					default_exp_time = "33334";/* us */
+					embedded_metadata_height = "0";
 				};
 
 				mode1 { //OV5693_MODE_2592X1458
 					mclk_khz = "24000";
 					num_lanes = "2";
 					tegra_sinterface = "serial_c";
-					discontinuous_clk = "no";
+					phy_mode = "DPHY";
+					discontinuous_clk = "yes";
 					dpcm_enable = "false";
 					cil_settletime = "0";
 
 					active_w = "2592";
 					active_h = "1458";
-					pixel_t = "bayer_bggr";
+					mode_type = "bayer";
+					pixel_phase = "bggr";
+					csi_pixel_bit_depth = "10";
 					readout_orientation = "90";
 					line_length = "2688";
 					inherent_gain = "1";
 					mclk_multiplier = "6.67";
 					pix_clk_hz = "160000000";
 
-					min_gain_val = "1.0";
-					max_gain_val = "16";
+					gain_factor = "10";
+					min_gain_val = "10";/* 1DB*/
+					max_gain_val = "160";/* 16DB*/
+					step_gain_val = "1";
+					default_gain = "10";
 					min_hdr_ratio = "1";
-					max_hdr_ratio = "64";
-					min_framerate = "1.816577";
-					max_framerate = "30";
-					min_exp_time = "34";
-					max_exp_time = "550385";
+					max_hdr_ratio = "1";
+					framerate_factor = "1000000";
+					min_framerate = "1816577";/*1.816577 */
+					max_framerate = "30000000";/*30*/
+					step_framerate = "1";
+					default_framerate = "30000000";
+					exposure_factor = "1000000";
+					min_exp_time = "34";/* us */
+					max_exp_time = "550385";/* us */
+					step_exp_time = "1";
+					default_exp_time = "33334";/* us */
+					embedded_metadata_height = "0";
 				};
 
 				mode2 { //OV5693_MODE_1280X720
 					mclk_khz = "24000";
 					num_lanes = "2";
 					tegra_sinterface = "serial_c";
-					discontinuous_clk = "no";
+					phy_mode = "DPHY";
+					discontinuous_clk = "yes";
 					dpcm_enable = "false";
 					cil_settletime = "0";
 
 					active_w = "1280";
 					active_h = "720";
-					pixel_t = "bayer_bggr";
+					mode_type = "bayer";
+					pixel_phase = "bggr";
+					csi_pixel_bit_depth = "10";
 					readout_orientation = "90";
 					line_length = "1752";
 					inherent_gain = "1";
 					mclk_multiplier = "6.67";
 					pix_clk_hz = "160000000";
 
-					min_gain_val = "1.0";
-					max_gain_val = "16";
+					gain_factor = "10";
+					min_gain_val = "10";/* 1DB*/
+					max_gain_val = "160";/* 16DB*/
+					step_gain_val = "1";
+					default_gain = "10";
 					min_hdr_ratio = "1";
-					max_hdr_ratio = "64";
-					min_framerate = "2.787078";
-					max_framerate = "120";
-					min_exp_time = "22";
-					max_exp_time = "358733";
+					max_hdr_ratio = "1";
+					framerate_factor = "1000000";
+					min_framerate = "2787078";/* 2.787078 */
+					max_framerate = "120000000";/* 120*/
+					step_framerate = "1";
+					default_framerate = "120000000";
+					exposure_factor = "1000000";
+					min_exp_time = "22";/* us */
+					max_exp_time = "358733";/* us */
+					step_exp_time = "1";
+					default_exp_time = "8334";/* us */
+					embedded_metadata_height = "0";
 				};
 
 				ports {
