--- a/kernel-dts/ers-platforms/tegra210b01-ers-emc-lpddr4.dtsi
+++ b/kernel-dts/ers-platforms/tegra210b01-ers-emc-lpddr4.dtsi
@@ -19,7 +19,7 @@
 #include <dt-bindings/reset/tegra210-car.h>
 
 / {
-	memory-controller@7001b000 {
+	external-memory-controller@7001b000 {
 		compatible = "nvidia,tegra21-emc", "nvidia,tegra210-emc";
 		reg = <0x0 0x7001b000 0x0 0x1000>,
 		      <0x0 0x7001e000 0x0 0x1000>,
