--- a/kernel-dts/ers-plugin-manager/tegra210b01-ers-plugin-manager.dtsi
+++ b/kernel-dts/ers-plugin-manager/tegra210b01-ers-plugin-manager.dtsi
@@ -258,7 +258,7 @@
 			odm-data = "enable-pcie-x4";
 			override@0 {
 #if TEGRA_XUSB_PADCONTROL_VERSION >= DT_VERSION_2
-				target = <&{/pcie-controller@1003000}>;
+				target = <&{/pcie@1003000}>;
 				_overlay_ {
 					pci@1,0 {
 						phys = <&{/xusb_padctl@7009f000/pads/pcie/lanes/pcie-3}>,
